[gd_scene load_steps=7 format=3 uid="uid://unanq7oxhbih"]

[ext_resource type="Script" uid="uid://cj21gb5qrxbm5" path="res://scripts/asteroid.gd" id="1_akfqu"]
[ext_resource type="Shader" uid="uid://c7ukpmkor2omd" path="res://shaders/asteroid_trail.gdshader" id="2_6mo6b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6mo6b"]
radius = 22.0907

[sub_resource type="GDScript" id="GDScript_akfqu"]
script/source = "extends Area2D

func _on_body_entered(body: Node) -> void:
	print(\"Entered Damage Area: \" + str(body))
	if body.has_method(\"take_damage\"):
		body.take_damage(2.0)
"

[sub_resource type="CircleShape2D" id="CircleShape2D_akfqu"]
radius = 41.0122

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4se3"]
shader = ExtResource("2_6mo6b")
shader_parameter/trail_length = 0.5
shader_parameter/trail_opacity = 0.5

[node name="Asteroid" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_akfqu")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-14, -18, 5, -21, 18, -12, 22, 2, 13, 19, -4, 22, -10, 17, -15, 16, -20, 8, -21, -7)

[node name="Bounce" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6mo6b")

[node name="Area2D" type="Area2D" parent="."]
script = SubResource("GDScript_akfqu")

[node name="Damage" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_akfqu")
debug_color = Color(0.580392, 0, 0.188235, 0.34902)

[node name="Timer" type="Timer" parent="Area2D/Damage"]
unique_name_in_owner = true
wait_time = 0.2

[node name="ColorRect" type="ColorRect" parent="."]
auto_translate_mode = 2
material = SubResource("ShaderMaterial_t4se3")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Area2D/Damage/Timer" to="." method="_on_timer_timeout"]
